Feature/selector selected opponent frame (#185)
* Add modalityScore to opponent and update related components for improved opponent selection

* better added opponents display

---------
